Bug 216968 - ath11k: pci: aborts suspend - ath11k_pci 0000:72:00.0: PM: failed to suspend async: error -110 -- Dell XPS 13 9310
Summary: ath11k: pci: aborts suspend - ath11k_pci 0000:72:00.0: PM: failed to suspend ...
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_network-wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks: 178231
  Show dependency tree
 
Reported: 2023-01-25 16:25 UTC by Len Brown
Modified: 2023-04-26 16:18 UTC (History)
2 users (show)

See Also:
Kernel Version: 6.2.0-rc5
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (31.56 KB, text/plain)
2023-01-25 16:25 UTC, Len Brown
Details
issue.def (372 bytes, text/plain)
2023-01-25 18:54 UTC, Todd Brandt
Details
0001-ath11k-allow-system-suspend-to-survive-ath11k.patch (1.71 KB, patch)
2023-02-01 18:25 UTC, Len Brown
Details | Diff
issue.def (411 bytes, text/plain)
2023-04-26 16:18 UTC, Todd Brandt
Details

Description Len Brown 2023-01-25 16:25:27 UTC
Created attachment 303649 [details]
dmesg

On a Dell XPS-13 9310, suspend occasionally fails because ath11k
returns an error while suspending.  This error return signals
the PM sub-system that the entire system suspend should be aborted.

Unless data would be lost or hardware damaged by continuing
with the suspend, ath11k should NOT be returning this error
and should NOT be aborting system suspend.

In this example, the ath11k failure was transient, the device
subsequently operated normally, and subsequent suspend/resume
cycles worked fine.

However, the damage was already done.
If the suspend were triggered by somebody closing their lid
and placing their laptop into a bag, the ath11k bug would cause
the system to be running while sealed in a briefcase...
Comment 1 Todd Brandt 2023-01-25 18:54:10 UTC
Created attachment 303650 [details]
issue.def
Comment 2 Len Brown 2023-02-01 18:25:49 UTC
Created attachment 303672 [details]
0001-ath11k-allow-system-suspend-to-survive-ath11k.patch

patch to stop propagating ath11k failure to PCI suspend flow
Comment 3 Kalle Valo 2023-02-22 11:20:32 UTC
Thanks, fix applied:

https://git.kernel.org/wireless/wireless/c/7c15430822e7
Comment 4 Todd Brandt 2023-04-26 16:18:15 UTC
Created attachment 304189 [details]
issue.def

Note You need to log in before you can comment on or make changes to this bug.